--- a/QuantumEntanglement/QuantumEntanglement.csproj
+++ b/QuantumEntanglement/QuantumEntanglement.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.Quantum.Sdk/0.10.2002.2610">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,8 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Development.Kit" Version="0.10.2002.2610" />
-    <PackageReference Include="Microsoft.Quantum.Numerics" Version="0.10.2002.2610" />
+    <PackageReference Include="Microsoft.Quantum.Development.Kit" Version="0.11.2006.403" />
   </ItemGroup>
 
   <ItemGroup>
